--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
    <div id="contenedor">
     <h1 id="titulo"> 🍕 Toppings Pizza</h1>
     <ul id="lista-toppings">
-        <li class="toppings" id="aceitunas">Aceitunas</li>
-        <li class="toppings" id="cebolla">Cebolla</li>
-        <li class="toppings color-naranja" id="albahaca">Albahaca</li>
+        <li class="toppings" id="aceitunas" onclick="mostrarE()">Aceitunas</li>
+        <li class="toppings" id="cebolla" onclick="mostrarE()">Cebolla</li>
+        <li class="toppings color-naranja" id="albahaca" onclick="mostrarE()">Albahaca</li>
         <li class="toppings color-blue" id="piña">Piña</li>
 
     </ul>
